--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Godot import
         run: godot --headless --import --path "$PWD"
       - name: GUT test
-        run: godot --headless -d -s --path "$PWD" addons/gut/gut_cmdln.gd -gdir=res://test/unit_tests -gsuffix=".test.gd" -gprefix="" -gexit
+        run: godot --headless -d -s --path "$PWD" addons/gut/gut_cmdln.gd
